# ador

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: 01_architecture_GAD.md  02_ner_methodology_GMD.md  03_llm_methodology_GMD.md  STUDY_GUIDE.md
src/ador/: __init__.py  cli.py
src/ador/api/: __init__.py  main.py
src/ador/core/: __init__.py  bootstrap.py  registry.py  router.py  schemas.py
src/ador/ingestion/: __init__.py  docx_loader.py  text_loader.py
src/ador/processors/: __init__.py  _normalizers.py  ner.py  rule_based.py
tests/: test_api.py  test_core.py  test_ner.py  test_normalizers.py  test_rule_based.py
